[gd_scene load_steps=5 format=3 uid="uid://stujdc35tdyk"]

[ext_resource type="Script" path="res://scripts/headmaster.gd" id="1_euis8"]
[ext_resource type="PackedScene" uid="uid://dsbc74b7vwac1" path="res://scenes/proctor.tscn" id="2_8ccsg"]
[ext_resource type="PackedScene" uid="uid://kt16eu83nos3" path="res://scenes/proctor_middle.tscn" id="3_dtup6"]
[ext_resource type="PackedScene" uid="uid://daaaxd1rjj1ha" path="res://scenes/proctor_outer.tscn" id="4_fyspm"]

[node name="Headmaster" type="Node2D"]
visible = false
script = ExtResource("1_euis8")

[node name="ProctorInner" parent="." instance=ExtResource("2_8ccsg")]
size = 180

[node name="ProctorMiddle" parent="." instance=ExtResource("3_dtup6")]
position = Vector2(0, 170)
size = 336

[node name="ProctorOuter" parent="." instance=ExtResource("4_fyspm")]
position = Vector2(0, 340)

[node name="Button" type="Button" parent="."]
offset_left = 4.0
offset_top = 513.0
offset_right = 255.0
offset_bottom = 578.0
text = "Check All"
